--- a/index.html
+++ b/index.html
@@ -1,132 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Valentine</title>
-<style>
-  body {
-    background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    overflow: hidden;
-  }
+  <meta charset="UTF-8">
+  <title>I Love You Juhi ❤️</title>
 
-  /* Falling hearts */
-  .heart {
-    position: fixed;
-    top: -10px;
-    font-size: 20px;
-    animation: fall linear infinite;
-    color: #e91e63;
-  }
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      background: linear-gradient(to bottom, #ff758c, #ff7eb3);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      font-family: Arial, sans-serif;
+      color: white;
+      text-align: center;
+    }
 
-  @keyframes fall {
-    to { transform: translateY(110vh); }
-  }
+    h1 {
+      font-size: 40px;
+      margin: 10px 0;
+    }
 
-  .card {
-    background: white;
-    padding: 25px;
-    border-radius: 20px;
-    text-align: center;
-    width: 320px;
-    box-shadow: 0 15px 40px rgba(0,0,0,0.2);
-    z-index: 2;
-  }
+    img {
+      width: 250px;
+      border-radius: 20px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+      margin: 15px 0;
+    }
 
-  h2 {
-    color: #e91e63;
-  }
+    .heart {
+      position: fixed;
+      top: -10px;
+      color: red;
+      font-size: 20px;
+      animation: fall linear forwards;
+    }
 
-  button {
-    padding: 12px 30px;
-    border: none;
-    border-radius: 25px;
-    font-size: 16px;
-    cursor: pointer;
-    background: #e91e63;
-    color: white;
-    margin-top: 15px;
-  }
+    @keyframes fall {
+      to {
+        transform: translateY(110vh);
+        opacity: 0;
+      }
+    }
 
-  img {
-    width: 100%;
-    border-radius: 15px;
-    margin-top: 15px;
-    display: none;
-    animation: pop 0.6s ease;
-  }
-
-  #msg, #love {
-    display: none;
-    margin-top: 10px;
-  }
-
-  #msg {
-    font-size: 20px;
-    color: #e91e63;
-  }
-
-  #love {
-    font-size: 22px;
-    font-weight: bold;
-    color: #ff1744;
-    animation: glow 1.5s ease-in-out infinite alternate;
-  }
-
-  @keyframes glow {
-    from { text-shadow: 0 0 5px #ff1744; }
-    to { text-shadow: 0 0 20px #ff1744; }
-  }
-
-  @keyframes pop {
-    0% { transform: scale(0.5); opacity: 0; }
-    100% { transform: scale(1); opacity: 1; }
-  }
-</style>
+    button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      padding: 12px 18px;
+      font-size: 16px;
+      border: none;
+      border-radius: 30px;
+      background: white;
+      color: #ff4081;
+      cursor: pointer;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    }
+  </style>
 </head>
+
 <body>
 
-<div class="card">
-  <h2>Juhi, will you be my Valentine? 💕</h2>
-  <button onclick="yesClicked()">Yes</button>
+  <h1>❤️ I Love You Juhi ❤️</h1>
 
-  <img id="photo" src="photo.jpg" alt="Love photo">
-  <div id="love">I love you Juhi ❤️</div>
-  <div id="msg">Ishu is happy 💖</div>
-</div>
+  <img src="photo.jpg" alt="My Love">
 
-<!-- Romantic music -->
-<iframe width="0" height="0"
-src="https://www.youtube.com/embed/2S1E9JrPqzI?autoplay=1&loop=1&playlist=2S1E9JrPqzI"
-frameborder="0"
-allow="autoplay">
-</iframe>
+  <p>You make my world more beautiful every day 💖</p>
 
-<script>
-function yesClicked() {
-  document.getElementById("photo").style.display = "block";
-  document.getElementById("love").style.display = "block";
-  document.getElementById("msg").style.display = "block";
-}
+  <!-- Music -->
+  <audio id="music" loop>
+    <source src="music.mp3" type="audio/mpeg">
+  </audio>
 
-/* Falling hearts */
-function createHeart() {
-  const heart = document.createElement("div");
-  heart.classList.add("heart");
-  heart.innerHTML = "❤️";
-  heart.style.left = Math.random() * 100 + "vw";
-  heart.style.animationDuration = (Math.random() * 3 + 2) + "s";
-  document.body.appendChild(heart);
+  <button onclick="document.getElementById('music').play()">
+    ▶ Play Music
+  </button>
 
-  setTimeout(() => heart.remove(), 5000);
-}
+  <script>
+    function createHeart() {
+      const heart = document.createElement("div");
+      heart.classList.add("heart");
+      heart.innerHTML = "❤️";
+      heart.style.left = Math.random() * 100 + "vw";
+      heart.style.animationDuration = (Math.random() * 3 + 2) + "s";
+      document.body.appendChild(heart);
 
-setInterval(createHeart, 300);
-</script>
+      setTimeout(() => {
+        heart.remove();
+      }, 5000);
+    }
+
+    setInterval(createHeart, 300);
+  </script>
 
 </body>
 </html>
